<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bgr"
        android:layout_marginBottom="90dp"
        android:layout_gravity="center_horizontal"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_margin="5dp"
        android:textColor="@color/txt_color_black"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/get_started"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started_btn"
        android:layout_margin="80dp"
        android:textColor="@color/txt_color_white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/get_started_btn_bg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/need_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textColor="@color/txt_color_black"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/i_bot"
            android:textSize="15sp"
            android:textColor="@color/i_bot_txt_color"/>

    </LinearLayout>

</LinearLayout>