<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bgr"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/txt_color_black"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/txt_color_black"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/txt_color_white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/get_started_btn_bg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/need_help"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_margin="5dp"
            android:text="@string/help"
            android:textColor="@color/txt_color_black"/>

        <TextView
            android:id="@+id/i_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:text="@string/i_bot"
            android:textColor="@color/i_bot_txt_color"/>

    </LinearLayout>


</LinearLayout>