<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/dnb_app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <include
        layout="@layout/dnb_content_featured_link"/>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/dnb_nav_header_main"
        app:menu="@menu/menu_main" />

</android.support.v4.widget.DrawerLayout>


</android.support.constraint.ConstraintLayout>

    <!--App Bar-->
    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_marginBottom="32dp">
        <!--Tool Bar-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/links_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <!--Page Title-->
            <TextView
                android:id="@+id/featured_links_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/featured_links"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textStyle="normal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <!--I-Library Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_i_library"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            android:layout_marginRight="@dimen/card_marginRight"
            android:layout_marginEnd="@dimen/card_marginEnd"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/describe_logo_i_library"
                        android:src="@drawable/ilbrarylogo" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        style="@style/card_text"
                        android:text="@string/i_library"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--Email Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_email"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/describe_logo_email"
                        android:src="@drawable/mailico" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:text="@string/email"
                        style="@style/card_text" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <!--Sakai Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_sakai"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            android:layout_marginRight="@dimen/card_marginRight"
            android:layout_marginEnd="@dimen/card_marginEnd"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/describe_logo_sakai"
                        android:src="@drawable/studentlogo" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        style="@style/card_text"
                        android:text="@string/sakai"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--MIS Web Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/mis_web"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/describe_logo_mis_web"
                        android:src="@drawable/studentslogo" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:text="@string/mis_web"
                        style="@style/card_text" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <!--UG Website Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_ug_site"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            android:layout_marginRight="@dimen/card_marginRight"
            android:layout_marginEnd="@dimen/card_marginEnd"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/describe_logo_ug_web"
                        android:src="@drawable/ugsitelogo" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        style="@style/card_text"
                        android:text="@string/ug_web"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--UG Library Card-->
        <android.support.v7.widget.CardView
            android:id="@+id/card_ug_library"
            style="@style/card_size"
            app:cardCornerRadius="@dimen/feat_link_cardCornerRadius"
            app:cardElevation="@dimen/feat_link_cardElevation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_height="90dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/card_bg">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/describe_logo_ug_library"
                        android:src="@drawable/ug_librarylogo" />
                </LinearLayout>
                <LinearLayout
                    android:background="@color/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <TextView
                        android:text="@string/ug_library"
                        style="@style/card_text" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <!--Floating Action Button-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="centerCrop"/>

</LinearLayout>


